--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>Your Name - Portfolio</title>
+</head>
+<body>
+    <header>
+        <h1>Your Name</h1>
+        <p>Web Developer</p>
+    </header>
+
+    <section id="projects">
+        <h2>Projects</h2>
+        <!-- Your project details go here -->
+    </section>
+
+    <section id="skills">
+        <h2>Skills</h2>
+        <!-- Your skills go here -->
+    </section>
+
+    <section id="contact">
+        <h2>Contact</h2>
+        <!-- Your contact information and form go here -->
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </footer>
+</body>
+</html>
 
