--- a/index.html
+++ b/index.html
@@ -4,27 +4,58 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Your Name - Portfolio</title>
+    <title>Santhosh Guntupalli's - Portfolio</title>
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Web Developer</p>
+        <h1>Santhosh Guntupalli</h1>
+        <p>Data Engineerr</p>
     </header>
 
     <section id="projects">
         <h2>Projects</h2>
-        <!-- Your project details go here -->
+        <!-- Movie Recommendation Engine
+Created a Movie Recommendation System that suggests films based on a chosen movie selection.
+
+Skills: Machine Learning, Natural Language Processing (NLP), Python Programming, Feature Engineering, Recommendation Systems. Data Pre-processing, Database Management Systems, API Integration, Model Evaluation, Data Visualisation
+
+Tools: Scikit-learn, TensorFlow, NLTK, Pandas, NumPy, TF-IDF Vectorizer, Jupyter Notebooks, PyCharm, Flask, GitHub
+
+Data Visualization projects
+Produced diverse data visualizations across my professional tenure and academic endeavors.
+
+Skills: Data Analysis, Visualization Design, Statistical Knowledge, Storytelling with Data, Critical Thinking, Domain Knowledge
+
+Tools: Matplotlib, Tableau, Pandas, Python, SQL, NoSQL, Git, GitHub,
+
+Real time Stock Market Analysis
+Real-time stock market analysis providing live trend indicators for informed investment decisions
+
+Skills: Data Streaming, Cloud Services, Data Processing, Data Warehousing, API Integration, Model Evaluation
+
+Tools: Kafka, Amazon EC2, Amazon S3, Crawler, AWS Glue Datalog, Amazon Athena, GitHub, jupyter notebook
+
+Snake Game With Python
+
+Created a dynamic Snake Game using Tkinter, showcasing skills in GUI programming and event handling. Excels in problem-solving, logical thinking, and attention to detail -->
     </section>
 
     <section id="skills">
         <h2>Skills</h2>
-        <!-- Your skills go here -->
+        <!-- Languages: Python, SQL, C++, C
+
+Cloud Technologies: AWS, GCP, Azure
+
+Bigdata Technologies: Apache Kafka, Apache Spark, Apache Flink, Apache Hadoop, Apache Flume, Apache Nifi
+
+Development and Tools: Docker, Kubernetes, Jenkins, Git, GitHub, REST API, Unix
+
+Machine Leaning and AI: Scikit-learn, TensorFlow, Predictive Analysis, NLP -->
     </section>
 
     <section id="contact">
         <h2>Contact</h2>
-        <!-- Your contact information and form go here -->
+        <!-- EMAIL: santhosh.guntupalli09@gmail.com -->
     </section>
 
     <footer>
