--- a/index.html
+++ b/index.html
@@ -4,63 +4,203 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/styles.css">
-    <title>Santhosh Guntupalli's - Portfolio</title>
+    <title>SANTHOSH GUNTUPALLI - Portfolio</title>
+    <!-- Add Font Awesome for icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-GLhlTQ8iQ6trSkDxqO5KekvQbrGPFsNHi1iRNPSYBHiKgC1NQw8kUp/DeIsQhp5" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <h1>Santhosh Guntupalli</h1>
-        <p>Data Engineerr</p>
+        <h1>SANTHOSH GUNTUPALLI</h1>
+        <p>Data Engineer</p>
     </header>
+
+    <section id="education">
+        <h2>Education</h2>
+        <p>Master’s in Management Information Systems</p>
+        <!-- Add more education details as needed -->
+    </section>
 
     <section id="projects">
         <h2>Projects</h2>
-        <!-- Movie Recommendation Engine
-Created a Movie Recommendation System that suggests films based on a chosen movie selection.
 
-Skills: Machine Learning, Natural Language Processing (NLP), Python Programming, Feature Engineering, Recommendation Systems. Data Pre-processing, Database Management Systems, API Integration, Model Evaluation, Data Visualisation
+        <!-- Project: Movie Recommendation Engine -->
+        <div class="project">
+            <h3>Movie Recommendation Engine</h3>
+            <p>Created a Movie Recommendation System that suggests films based on a chosen movie selection.</p>
 
-Tools: Scikit-learn, TensorFlow, NLTK, Pandas, NumPy, TF-IDF Vectorizer, Jupyter Notebooks, PyCharm, Flask, GitHub
+            <!-- Skills -->
+            <div class="project-skills">
+                <h4>Skills</h4>
+                <ul>
+                    <li>Machine Learning</li>
+                    <li>Natural Language Processing (NLP)</li>
+                    <li>Python Programming</li>
+                    <li>Feature Engineering</li>
+                    <li>Recommendation Systems</li>
+                    <!-- Add more skills as needed -->
+                </ul>
+            </div>
 
-Data Visualization projects
-Produced diverse data visualizations across my professional tenure and academic endeavors.
+            <!-- Tools -->
+            <div class="project-tools">
+                <h4>Tools</h4>
+                <ul>
+                    <li>Scikit-learn</li>
+                    <li>TensorFlow</li>
+                    <li>NLTK</li>
+                    <li>Pandas</li>
+                    <li>Flask</li>
+                    <!-- Add more tools as needed -->
+                </ul>
+            </div>
+        </div>
 
-Skills: Data Analysis, Visualization Design, Statistical Knowledge, Storytelling with Data, Critical Thinking, Domain Knowledge
+        <!-- Project: Data Visualization projects -->
+        <div class="project">
+            <h3>Data Visualization projects</h3>
+            <p>Produced diverse data visualizations across my professional tenure and academic endeavors.</p>
 
-Tools: Matplotlib, Tableau, Pandas, Python, SQL, NoSQL, Git, GitHub,
+            <!-- Skills -->
+            <div class="project-skills">
+                <h4>Skills</h4>
+                <ul>
+                    <li>Data Analysis</li>
+                    <li>Visualization Design</li>
+                    <li>Statistical Knowledge</li>
+                    <li>Storytelling with Data</li>
+                    <li>Domain Knowledge</li>
+                    <!-- Add more skills as needed -->
+                </ul>
+            </div>
 
-Real time Stock Market Analysis
-Real-time stock market analysis providing live trend indicators for informed investment decisions
+            <!-- Tools -->
+            <div class="project-tools">
+                <h4>Tools</h4>
+                <ul>
+                    <li>Matplotlib</li>
+                    <li>Tableau</li>
+                    <li>Pandas</li>
+                    <li>Python</li>
+                    <li>SQL</li>
+                    <!-- Add more tools as needed -->
+                </ul>
+            </div>
+        </div>
 
-Skills: Data Streaming, Cloud Services, Data Processing, Data Warehousing, API Integration, Model Evaluation
+        <!-- Project: Real time Stock Market Analysis -->
+        <div class="project">
+            <h3>Real time Stock Market Analysis</h3>
+            <p>Real-time stock market analysis providing live trend indicators for informed investment decisions.</p>
 
-Tools: Kafka, Amazon EC2, Amazon S3, Crawler, AWS Glue Datalog, Amazon Athena, GitHub, jupyter notebook
+            <!-- Skills -->
+            <div class="project-skills">
+                <h4>Skills</h4>
+                <ul>
+                    <li>Data Streaming</li>
+                    <li>Cloud Services</li>
+                    <li>Data Processing</li>
+                    <li>Data Warehousing</li>
+                    <li>API Integration</li>
+                    <!-- Add more skills as needed -->
+                </ul>
+            </div>
 
-Snake Game With Python
+            <!-- Tools -->
+            <div class="project-tools">
+                <h4>Tools</h4>
+                <ul>
+                    <li>Kafka</li>
+                    <li>Amazon EC2</li>
+                    <li>Amazon S3</li>
+                    <li>AWS Glue Datalog</li>
+                    <li>Amazon Athena</li>
+                    <!-- Add more tools as needed -->
+                </ul>
+            </div>
+        </div>
 
-Created a dynamic Snake Game using Tkinter, showcasing skills in GUI programming and event handling. Excels in problem-solving, logical thinking, and attention to detail -->
+        <!-- Project: Snake Game With Python -->
+        <div class="project">
+            <h3>Snake Game With Python</h3>
+            <p>Created a dynamic Snake Game using Tkinter, showcasing skills in GUI programming and event handling.</p>
+
+            <!-- Skills -->
+            <div class="project-skills">
+                <h4>Skills</h4>
+                <ul>
+                    <li>GUI Programming</li>
+                    <li>Event Handling</li>
+                    <li>Problem-solving</li>
+                    <li>Logical Thinking</li>
+                    <!-- Add more skills as needed -->
+                </ul>
+            </div>
+
+            <!-- Tools -->
+            <div class="project-tools">
+                <h4>Tools</h4>
+                <ul>
+                    <li>Python</li>
+                    <li>Tkinter</li>
+                    <!-- Add more tools as needed -->
+                </ul>
+            </div>
+        </div>
     </section>
 
     <section id="skills">
-        <h2>Skills</h2>
-        <!-- Languages: Python, SQL, C++, C
+        <h2>Skillset</h2>
+        
+        <!-- Languages -->
+        <div class="skill-category">
+            <h3>Languages</h3>
+            <ul>
+                <li>Python</li>
+                <li>SQL</li>
+                <li>C++</li>
+                <li>C</li>
+            </ul>
+        </div>
 
-Cloud Technologies: AWS, GCP, Azure
+        <!-- Cloud Technologies -->
+        <div class="skill-category">
+            <h3>Cloud Technologies</h3>
+            <ul>
+                <li>AWS</li>
+                <li>GCP</li>
+                <li>Azure</li>
+            </ul>
+        </div>
 
-Bigdata Technologies: Apache Kafka, Apache Spark, Apache Flink, Apache Hadoop, Apache Flume, Apache Nifi
+        <!-- Bigdata Technologies -->
+        <div class="skill-category">
+            <h3>Bigdata Technologies</h3>
+            <ul>
+                <li>Apache Kafka</li>
+                <li>Apache Spark</li>
+                <li>Apache Flink</li>
+                <li>Apache Hadoop</li>
+                <li>Apache Flume</li>
+                <li>Apache Nifi</li>
+                <!-- Add more technologies as needed -->
+            </ul>
+        </div>
 
-Development and Tools: Docker, Kubernetes, Jenkins, Git, GitHub, REST API, Unix
+        <!-- Development and Tools -->
+        <div class="skill-category">
+            <h3>Development and Tools</h3>
+            <ul>
+                <li>Docker</li>
+                <li>Kubernetes</li>
+                <li>Jenkins</li>
+                <li>Git</li>
+                <li>GitHub</li>
+                <li>REST API</li>
+                <li>Unix</li>
+                <!-- Add more tools as needed -->
+            </ul>
+        </div>
 
-Machine Leaning and AI: Scikit-learn, TensorFlow, Predictive Analysis, NLP -->
-    </section>
-
-    <section id="contact">
-        <h2>Contact</h2>
-        <!-- EMAIL: santhosh.guntupalli09@gmail.com -->
-    </section>
-
-    <footer>
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+        <!-- Machine Learning and AI -->
+        <div
 
