--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-GLhlTQ8iQ6trSkDxqO5KekvQbrGPFsNHi1iRNPSYBHiKgC1NQw8kUp/DeIsQhp5" crossorigin="anonymous">
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
